production/server/kubernetes/server.deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server

spec:
  replicas: 2
  selector:
    matchLabels:
      app: labos-discord-bot
      tier: server
  template:
    metadata:
      labels:
        app: labos-discord-bot
        tier: server
        role: rolling-update
    spec:
      restartPolicy: Always
      containers:
        - name: server-container
          image: localhost:5000/labosdiscordbot:server
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
