production/server/kubernetes/server.service.yml
kind: Service
apiVersion: v1

metadata:
  name: server-service
  labels:
    app: server
    role: rolling-update

spec:
  selector:
    app: server
    role: rolling-update
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: sockets
      port: 3000
      targetPort: 3000
