production/server/kubernetes/server.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: server-ingress

spec:
  database:
    service:
      name: db
      port:
        number: 27017
